# elt

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/elt/: main.py
src/elt/configs/: config.py
src/elt/extract/: extract.py
src/elt/load/: load.py
src/elt/sql/: sample.sql
src/elt/transform/: transform.py
